# distributed-system

./: $null  .gitattributes  .gitignore  README.md  payments-ordenSvc-actual.js  summary.txt
inventario_api/: .env.example  .gitignore  Cargo.toml  Dockerfile  build_output.txt  docker-compose.yml  readme.md
inventario_api/.sqlx/: query-1f25941768768a151927dfca108f73477926726c51fe85f0996ce930e9ed66b2.json  query-28318a12101abff61a6daeccdd51f7db5aeb14cd8d4ea972868ad9db47aaf428.json  query-4154be2b3428111be474070f2fdb28f59307b5ac21a4be5e443e342d62da5ddd.json  query-62999090bc07bef79614743fef94087b93e671e5fb46de0df217c9efa7887f08.json  query-7a2e5365674b9505b1faa9a62490b84dd14919f23fee0e57db6d06b695045475.json  query-c6164fd0ef7fadb00e34a3074d79a780cd934bb0b411c36413dfc5b52adb3e40.json  query-ca24a97ff0142110e5bcf99011e3474557aa2df1ca36e15c90d33ad928a28edb.json  query-cd74d516a611f27efbf3b8fa3f252f7b47030f01b401ca86720f0a5d7a0a1518.json  query-ceb47520bf754b9d321ca72b3f16068d3171768e3da82eed5b07f3204accfe84.json  query-d4598df5e13b3bd8a8b92b658adc50d78a720cf9ce76c7da355a9543e7565bab.json  query-fe49178671cdcf5d69ed203d071748f3a65ed53956f72b0309070b4b1df8529c.json  query-ff42ace6c0e8dc7d6aace1794f5fd615f1e5ad8a2c0b3708023adbcee3016e78.json
inventario_api/migrations/: 20251228183508_inventory.sql
inventario_api/src/: database.rs  lib.rs  main.rs
inventario_api/src/controllers/: delete_inventory_controller.rs  inventory_controller.rs  mod.rs  update_inventory_controller.rs
inventario_api/src/middleware/: mod.rs  token.rs
inventario_api/src/models/: data.rs  mod.rs  (+1 more)
(+178 files in other folders)
