[package]
name = "inventario_api"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.7"
tokio = { version = "1.37", features = ["full"] } 
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "macros", "chrono"] }

chrono = { version = "0.4.42", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

jsonwebtoken = "9.3"
axum-extra = { version = "0.9", features = ["typed-header", "cookie"] }
tower-http = { version = "0.5", features = ["trace", "fs", "cors"] }

dotenvy = "0.15"